...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="@dimen/padding_8dp">

    <LinearLayout
        android:id="@+id/tool_tray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:divider="@drawable/annotation_tool_spacer"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
...
        <!-- add in predefined tools supported -->
        <include layout="@layout/annotation_tools" />

    </LinearLayout>

    <androidx.pdf.ink.view.tool.AnnotationToolView
        android:id="@+id/collapsed_tool"
        android:layout_width="@dimen/annotation_tool_width"
        android:layout_height="@dimen/annotation_tool_height"
        android:contentDescription="@string/annotation_pen_button_content_desc"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
